--- a/Livestreamer Twitch Viewer/Livestreamer Twitch Viewer.csproj
+++ b/Livestreamer Twitch Viewer/Livestreamer Twitch Viewer.csproj
@@ -72,6 +72,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -94,16 +95,31 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Client\AuthenticatedClient.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="Exceptions\BadRequestException.cs" />
+    <Compile Include="Exceptions\BadResourceException.cs" />
+    <Compile Include="Exceptions\BadScopeException.cs" />
+    <Compile Include="Exceptions\NotPartneredException.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="Models\Host.cs" />
+    <Compile Include="Models\HostStream.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Quality.xaml.cs">
       <DependentUpon>Quality.xaml</DependentUpon>
     </Compile>
     <Compile Include="Scroll.xaml.cs">
       <DependentUpon>Scroll.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SimpleJSON.cs" />
     <Compile Include="TwitchStatus.cs" />
+    <Compile Include="V5\Requests.cs" />
+    <Compile Include="V5\UserFollows.cs" />
     <Page Include="Log.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -136,11 +152,6 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -148,8 +159,8 @@
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
@@ -178,6 +189,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="System\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
